added an add ingredient page with styling

--- a/main_app/templates/kitchen.html
+++ b/main_app/templates/kitchen.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
     <link rel="stylesheet" href="/Users/matthewpaxton/Desktop/Python/django/django_project/dinner_planner/main_app/static/css/style.css">
     <title>Kitchen</title>
 </head>
 <header>
-    <h2>Welcome {{ name }}</h2>
     <button>Meal Wizard</button>
+    <h1>Welcome {{ name }}</h1>
     <button>Logout</button>
 </header>
 
