--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -5,10 +5,12 @@ header {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     margin: 25px;
-    background-color: white;
     padding: 15px;
+    border: solid 2px black;
+    border-radius: 10px;
+    background-color: white;
 }
 
 body {
@@ -22,7 +24,7 @@ body h1 {
 }
 
 .panelsAll {
-    border: solid 2px black;
+    /* border: solid 2px black; */
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
@@ -39,4 +41,21 @@ body h1 {
     text-align: center;
     padding: 15px;
     background-color: white;
+    color: #755514;
+}
+
+.addFood {
+    border: solid 2px black;
+    border-radius: 10px;
+    background-color: white;
+    width: 75%;
+    padding: 25px;
+    margin: 25px;
+
+}
+
+.addSection {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
