--- a/main_app/templates/add_ingredient.html
+++ b/main_app/templates/add_ingredient.html
@@ -23,8 +23,9 @@
                 <div class="form-group row">
                     <label for="category" class="col-sm-4 col-form-label">Category:</label>
                     <div>
-                        <select name="category" id="">
-                            <option value="">Select food category</option>
+                        <select name="category" class="form-control" id="">
+                            <option value="" disabled selected >Select food category</option>
+                            <option value=""></option>
                         </select>
                     </div>
                 </div>
@@ -32,21 +33,21 @@
                 <div class="form-group row">
                     <label for="name" class="col-sm-4 col-form-label">Food name:</label>
                     <div>
-                        <input type="text" name="name" >
+                        <input type="text" class="form-control" name="name" >
                     </div>
                 </div>
 
                 <div class="form-group row">
                     <label for="quantity" class="col-sm-4 col-form-label">Quantity:</label>
                     <div>
-                        <input type="number" name="" id="">
+                        <input type="number" class="form-control" name="" id="">
                     </div>
                 </div>
 
                 <div class="form-group row">
                     <label for="date" class="col-sm-4 col-form-label">Use/Sell by date:</label>
                     <div>
-                        <input type="date" name="date" id="">
+                        <input type="date" class="form-control" name="date" id="">
                     </div>
                 </div>
 
