fix user rating percentage

--- a/main_app/templates/dashboard.html
+++ b/main_app/templates/dashboard.html
@@ -50,11 +50,11 @@
             <p>
                 {{recipe_num.name}} <!-- print recipe name :) yum-->
             </p>
-            <p> {{ratings.score}} </p> <!--currently displays as a decimal...for whatever reason cant convert to percentage in backend yet-->
+            <p> scored {{ratings}} % on rotten tomato</p> <!--currently displays as a decimal...for whatever reason cant convert to percentage in backend yet-->
 
 
 
-            
+
             <img src="{{recipe_picture}}" alt="image of the {{recipe_num.name}} dish">
             <p>{{servings}}</p>
             <p>cook time: {{cook_time}}</p>
