add recipe description

--- a/main_app/templates/dashboard.html
+++ b/main_app/templates/dashboard.html
@@ -50,6 +50,7 @@
             <p>
                 {{recipe_num.name}} <!-- print recipe name :) yum-->
             </p>
+            <p> {{description}}</p>
             <p> scored {{ratings}} % on rotten tomato</p> <!--currently displays as a decimal...for whatever reason cant convert to percentage in backend yet-->
 
 
