--- a/main_app/templates/kitchen.html
+++ b/main_app/templates/kitchen.html
@@ -11,7 +11,7 @@
 <header>
     <button>Meal Wizard</button>
     <h1>Welcome {{ name }}</h1>
-    <button>Logout</button>
+    <button><a href="/logout">Logout</a></button>
 </header>
 
 <body>
