--- a/main_app/templates/add_ingredient.html
+++ b/main_app/templates/add_ingredient.html
@@ -11,7 +11,7 @@
 <header>
     <button>Meal Wizard</button>
     <h1>Welcome {{ name }}</h1>
-    <span><button>Home</button><button>Logout</button></span>
+    <span><button><a href="/home">Home</a></button><button><a href="/logout">Logout</a></button></span>
 </header>
 
 <body>
