--- a/main_app/templates/recipe_info.html
+++ b/main_app/templates/recipe_info.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="/Users/matthewpaxton/Desktop/Python/django/django_project/dinner_planner/main_app/static/css/style .css">
-    <title>Ingredients</title>
+    <title>Recipe</title>
 </head>
 <body>
     <header>
@@ -15,31 +15,14 @@
         <span><button><a href="/home">Home</a></button><button><a href="/logout">Logout</a></button></span>
     </header>
 
-    <main class="tableArea">
-        <h2 class="centered">{{ Category }}</h2>
-        <div class="table">
-            <table class="table table-striped table table-bordered table-sm ">
-                <tr>
-                    <th>Ingredient</th>
-                    <th>Quantity</th>
-                    <th>Date added</th>
-                    <th>Use/Sell by date</th>
-                    <th></th>
-                </tr>
+    <main>
+        <div class="recipePage">
+            <h2 class="centered">{{ Recipe Name }}</h2>
 
-                <tr>
-                    <td>test</td>
-                    <td>test</td>
-                    <td>test</td>
-                    <td>test</td>
-                    <td>test</td>
-                </tr>
-
-
-            </table>
         </div>
-    </main>
 
+
+    </main>
 
 
 
