--- a/main_app/templates/test_form.html
+++ b/main_app/templates/test_form.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="/Users/matthewpaxton/Desktop/Python/django/django_project/dinner_planner/main_app/static/css/style .css">
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'style.css' %}" />    
     <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js'></script>
     <title>Recipe Wizard</title>
 </head>
@@ -26,7 +27,7 @@
                 <div class="form-group row">
                     <label class="col-sm-4 col-form-label" for="time">How much time do you have?</label>
                     <div>
-                        <input class="form-control" placeholder="(Minutes)" type="number" name="time" step='10' min="0">
+                        <input class="form-control" placeholder="(Minutes)" type="number" name="time" step='15' min="0">
                     </div>
                 </div>
 
@@ -34,7 +35,7 @@
                     <label class="col-sm-4 col-form-label" for="ingred1">Choose a category</label>
                     <div>
                         <select required class="form-control" type="text" name="ingred1">
-                            <option class="form-control" disabled selected value="">Category</option>
+                            <option class="form-control" disabled selected value="">Category</option><!-- ie ethnicity -->
                             <option value=""></option>
                         </select>
                     </div>
@@ -59,24 +60,27 @@
     <div class="recipeList">
         <div>
             <div>
-                <img src="" alt=""> <h3>{{name}} - {{ time }}</h3>
+                <img class="recipeImg" src="{{recipe_picture}}" alt="image of {{recipe_num.name}}">
+                <h4><a href="">{{recipe_num.name}}</a></h4>
             </div>
             <div>{{ description }}</div>
         </div>
 
-        <div>
-            <div>
-                <img src="" alt=""> <h3>{{name}} - {{ time }}</h3>
-            </div>
-            <div>{{ description }}</div>
-        </div>
-
-        <div>
-            <div>
-                <img src="" alt=""> <h3>{{name}} - {{ time }}</h3>
-            </div>
-            <div>{{ description }}</div>
-        </div>
+        {% for i in ideas%}
+            <a href="/make_dinner/recipe/{{i}}">IT WORKS! recipe number {{i}}</a> 
+        {% endfor %}
+        <!-- <a href="/make_dinner/recipe/{{0}}"> recipe number 1</a> 
+        <a href="/make_dinner/recipe/{{1}}"> recipe number 2</a> 
+        <a href="/make_dinner/recipe/{{2}}"> recipe number 3</a> 
+        <a href="/make_dinner/recipe/{{3}}"> recipe number 4</a> 
+        <a href="/make_dinner/recipe/{{4}}"> recipe number 5</a> 
+        <a href="/make_dinner/recipe/{{5}}"> recipe number 6</a> 
+        <a href="/make_dinner/recipe/{{6}}"> recipe number 7</a> 
+        <a href="/make_dinner/recipe/{{7}}"> recipe number 8</a> 
+        <a href="/make_dinner/recipe/{{8}}"> recipe number 9</a> 
+        <a href="/make_dinner/recipe/{{9}}"> recipe number 10</a> 
+        
+        -->
 
     </div>
 
