--- a/main_app/templates/eat.html
+++ b/main_app/templates/eat.html
@@ -50,7 +50,7 @@
                         <legend class="col-form-label col-sm-3 pt-0"> Ingredients: <span class="add">+ </span></legend>
                         <div class="col-sm-4">
                                 <div class="ingredient" id="div_1">
-                                    <input id="addItem" class="form-control" type="text" name="ingredient" value="{{ingredient.name}}"><br>
+                                    <input id="addItem" class="form-control" type="text" name="ingredient"><br>
                                 </div>
                         </div>        
                     </div>
