--- a/main_app/templates/login_page.html
+++ b/main_app/templates/login_page.html
@@ -59,7 +59,7 @@
                     </div>
                 </div>
 
-                <button>Register</button>
+                <button class="loginButton">Register</button>
             </form>
             {% if messages %}
             <ul class="messages">
@@ -88,7 +88,7 @@
                     </div>
                 </div>
                 
-                <button>Log In</button>
+                <button class="loginButton">Log In</button>
             </form>
             
         </div>
