add ethnicities, dietary restrictions, holidays, categories, and date night

--- a/main_app/templates/test_form.html
+++ b/main_app/templates/test_form.html
@@ -32,15 +32,74 @@
                 </div>
 
                 <div class="form-group row">
-                    <label class="col-sm-4 col-form-label" for="ingred1">Choose a category</label>
+                    <label class="col-sm-4 col-form-label" for="ingred1">Choose an ethnicity</label>
+                    <div>
+                        <select required class="form-control" type="text" name="category">
+                            <option class="form-control" disabled selected value="">Ethnicity</option><!-- ie ethnicity -->
+                            <option value="brazilian">Brazilian</option>
+                            <option value="carribean">Carribean</option>
+                            <option value="chinese">Chinese</option>
+                            <option value="french">French</option>
+                            <option value="german">German</option>
+                            <option value="greek">Greek</option>
+                            <option value="indian">Indian</option>
+                            <option value="italian">Italian</option>
+                            <option value="korean">Korean</option>
+                            <option value="latin_american">Latin American</option>
+                            <option value="mexican">Mexican</option>
+                            <option value="middle_eastern">Middle Eastern</option>
+                            <option value="japanese">Japanese</option>
+                            <option value="thai">Thai</option>
+                            <option value="vietnamese">Vietnamese</option>
+                        </select>
+                    </div>
+                </div>
+
+                <div class="form-group row">
+                    <label class="col-sm-4 col-form-label" for="ingred1">Choose Date Night or a Holiday</label>
+                    <div>
+                        <select required class="form-control" type="text" name="category">
+                            <option class="form-control" disabled selected value="">Holiday</option><!-- ie ethnicity -->
+                            <option value="date_night">Date Night</option>
+                            <option value="black_history_month">Black History Month</option>
+                            <option value="christmas">Christmas</option>
+                            <option value="easter">Easter</option>
+                            <option value="tasty_holiday_hanukkah">Hannukah</option>
+                            <option value="passover">Passover</option>
+                            <option value="lunar_new_year">Lunar New Year</option>
+                            <option value="halloween">Halloween</option>
+                            <option value="thanksgiving">Thanksgiving</option>
+
+                        </select>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label class="col-sm-4 col-form-label" for="ingred1">Choose a Category</label>
                     <div>
                         <select required class="form-control" type="text" name="category">
                             <option class="form-control" disabled selected value="">Category</option><!-- ie ethnicity -->
-                            <option value="Mexican">Mexican</option>
-                            <option value="Brazilian">Brazilian</option>
-                            <option value="Italian">Italian</option>
-                            <option value="Indian">Indian</option>
-                            <option value="Middle Eastern">Middle Eastern</option>
+                            <option value="one_pot_or_pan">One-Pot or Pan</option>
+                            <option value="instant_pot">Instant Pot</option>
+                            <option value="slow_cooker">Slow Cooker</option>
+                            <option value="kid_friendly">Kid-Friendly</option>
+                            <option value="bbq">BBQ</option>
+                            <option value="seafood">Seafood</option>
+
+                        </select>
+                    </div>
+                </div>
+
+                <div class="form-group row">
+                    <label class="col-sm-4 col-form-label" for="ingred1">Choose a Dietary Restriction</label>
+                    <div>
+                        <select required class="form-control" type="text" name="category">
+                            <option class="form-control" disabled selected value="">Allergy</option><!-- ie ethnicity -->
+                            <option value="gluten_free">Vegetarian</option>
+                            <option value="vegan">Vegan</option>
+                            <option value="pescatarian">Pescatarian</option>
+                            <option value="gluten_free">Gluten-Free</option>
+                            <option value="dairy_free">Dairy-Free</option>
+                            <option value="low_carb">Low-Carb</option>
                         </select>
                     </div>
                 </div>
